--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -27,3 +27,53 @@ body {
   background-color: #010100;
   overflow-x: hidden;
 }
+
+.content-cards {
+  position: relative;
+  z-index: 3;
+  transform: translateY(-150px);
+  margin-bottom: 100px;
+}
+
+.title {
+  font-size: 1.5rem;
+  margin-bottom: 14px;
+}
+
+.section-container {
+  margin: 0 65px;
+}
+
+#loading-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#loading-spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 6px solid #f3f3f3;
+  border-radius: 50%;
+  border-top-color: #3498db;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
