--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 
 .footer {
     width: 100%;
-    background-color: #010111;
+    background-color: #10151d;
     color: #fff;
     padding: 10px 0;
   }
